Updated the start.

--- a/pal_app/templates/base.html
+++ b/pal_app/templates/base.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>FitnessApp</title>
 </head>
 <body>
 <a href="/products">POKAZ</a>
-<a href="/addProduct">DODAJ</a>
+<a href="/add-product">DODAJ</a>
+<a href="/user-data">USER</a>
+<a href="/">START</a>
 <div class="container">
     {% block body %}
     {% endblock %}
