--- a/pal_app/templates/pal_app/add-product.html
+++ b/pal_app/templates/pal_app/add-product.html
@@ -7,7 +7,7 @@
 {% endif %}
 <div class="row">
     <div class="col-sm-4">
-        <form action="" method="post">
+        <form action="/add-product" method="post">
             {% csrf_token %}
             <div class="form-group">
                 <label for="product_name">Podaj nazwę produktu</label>
