Adding products to meals.

--- a/pal_app/templates/base.html
+++ b/pal_app/templates/base.html
@@ -12,6 +12,7 @@
 <a href="/add-product">DODAJ</a>
 <a href="/user-data">USER</a>
 <a href="/">START</a>
+<a href="/meal/1">breakfast</a>
 <div class="container">
     {% block body %}
     {% endblock %}
