--- a/pal_app/templates/pal_app/meal-data.html
+++ b/pal_app/templates/pal_app/meal-data.html
@@ -9,14 +9,15 @@
         {% endif %}
         <form action="/meal/{{meal_id}}/" method="post">
             {% csrf_token %}
-
             {% if product_list %}
             {% for product in product_list %}
-            <input type="checkbox" name="products" value="{{product.id}}">{{product}}<br>
+            <input type="checkbox" name="products" {% if product in selected %}checked{% endif %} value="{{product.id}}"
+                   id="product">
+            <label for="product">{{product.name}} - {{product.calories}} cal/100g</label>
+            <br/>
             {% endfor %}
-            <input type="submit" value="Submit">
+            <input class="btn btn-dark" type="submit" value="Submit">
         </form>
-
         {% else %}
         <p>ni ma produktow panie</p>
         {% endif %}
