Changed daily intake formulas, updated some models

--- a/pal_app/templates/pal_app/products-list.html
+++ b/pal_app/templates/pal_app/products-list.html
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="row">
     <div class="col-sm-8">
-        <h1>produkty</h1>
+        <h1>Available products</h1>
         {% if product_list %}
         <ul class="list-group">
             {% for product in product_list %}
