--- a/pal_app/templates/pal_app/add-product.html
+++ b/pal_app/templates/pal_app/add-product.html
@@ -1,27 +1,27 @@
 {% extends 'base.html' %}
 {% block body %}
-
-<h1>wprowadz produkt</h1>
-{% if debug %}
-{{debug}}
-{% endif %}
+<h1>Add your own product:</h1>
 <div class="row">
     <div class="col-sm-4">
-        <form action="/add-product" method="post">
+        <form action="/add-product/" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="product_name">Podaj nazwę produktu</label>
+                <label for="product_name">Name</label>
                 <input type="text" class="form-control" name="product_name" id="product_name"
                        placeholder="product name">
             </div>
             <div class="form-group">
-                <label for="calories">Podaj wartosc kaloryczna</label>
+                <label for="calories">Calories</label>
                 <input type="number" class="form-control" name="calories" id="calories"
                        aria-describedby="descriptionHelp" value="0">
-                <small id="descriptionHelp" class="form-text text-muted">Wartosc kaloryczna na 100g produktu.</small>
+                <small id="descriptionHelp" class="form-text text-muted">Per 100grams.</small>
             </div>
-            <button type="submit" class="btn btn-dark">Zatwierdz</button>
+            <button type="submit" class="btn btn-dark">add</button>
         </form>
     </div>
 </div>
+{% if debug %}
+<br>
+{{debug}}
+{% endif %}
 {% endblock %}
