--- a/pal_app/templates/pal_app/meal-data.html
+++ b/pal_app/templates/pal_app/meal-data.html
@@ -5,7 +5,7 @@
         {% if meal_name %}
         <h1>{{ meal_name }}</h1>
         {% else %}
-        <p>ni ma posilka</p>
+        <p>ni ma posilka panie</p>
         {% endif %}
         <form action="/meal/{{meal_id}}/" method="post">
             {% csrf_token %}
@@ -16,7 +16,7 @@
             <label for="product">{{product.name}} - {{product.calories}} cal/100g</label>
             <br/>
             {% endfor %}
-            <input class="btn btn-dark" type="submit" value="Submit">
+            <input class="btn btn-dark" type="submit" value="save">
         </form>
         {% else %}
         <p>ni ma produktow panie</p>
