--- a/pal_app/templates/pal_app/user-data.html
+++ b/pal_app/templates/pal_app/user-data.html
@@ -1,41 +1,38 @@
 {% extends 'base.html' %}
 {% block body %}
-<h1>dane użytkownika</h1>
-{% if debug %}
-{{debug}}
-{% endif %}
+<h1>Your account:</h1>
 <div class="row">
     <div class="col-sm-4">
         <form action="" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="user_name">Podaj nazwę uzytkownika</label>
+                <label for="user_name">Username</label>
                 <input type="text" class="form-control" name="user_name" id="user_name"
-                       placeholder="username">
+                       placeholder="name">
             </div>
             <div class="form-group">
-                <label for="height">Wprowadz wzrost</label>
+                <label for="height">Your height</label>
                 <input type="number" class="form-control" name="height" id="height"
                        aria-describedby="descriptionHelp" placeholder="height">
-                <small id="descriptionHelp" class="form-text text-muted">Wzrost w cm.</small>
+                <small id="descriptionHelp" class="form-text text-muted">In centimeters.</small>
             </div>
             <div class="form-group">
-                <label for="weight">Wprowadz wage</label>
+                <label for="weight">Your weight</label>
                 <input type="number" class="form-control" name="weight" id="weight"
                        aria-describedby="descriptionHeightHelp" placeholder="weight">
-                <small id="descriptionHeightHelp" class="form-text text-muted">Waga w kg.</small>
+                <small id="descriptionHeightHelp" class="form-text text-muted">In kilograms.</small>
             </div>
             <div class="form-group">
-                <label for="age">Wprowadz wiek</label>
-                <input type="number" class="form-control" name="age" id="age"
+                <label for="age">Birthday</label>
+                <input type="date" class="form-control" name="age" id="age"
                        placeholder="age">
             </div>
             <div class="form-group">
-                <label>Wybierz plec</label><br>
+                <label>Sex</label><br>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="sex" id="inlineRadio1"
-                           value="k">
-                    <label class="form-check-label" for="inlineRadio1">K</label>
+                           value="f">
+                    <label class="form-check-label" for="inlineRadio1">F</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="sex" id="inlineRadio2"
@@ -43,8 +40,12 @@
                     <label class="form-check-label" for="inlineRadio2">M</label>
                 </div>
             </div>
-            <button type="submit" class="btn btn-dark">Zatwierdz</button>
+            <button type="submit" class="btn btn-dark">Save</button>
         </form>
     </div>
 </div>
+{% if debug %}
+<br>
+<h6>{{debug}}</h6>
+{% endif %}
 {% endblock %}
