Now deleting user and products works.

--- a/pal_app/templates/pal_app/add-product.html
+++ b/pal_app/templates/pal_app/add-product.html
@@ -14,9 +14,9 @@
                 <label for="calories">Calories</label>
                 <input type="number" class="form-control" name="calories" id="calories"
                        aria-describedby="descriptionHelp" value="0">
-                <small id="descriptionHelp" class="form-text text-muted">Per 100grams.</small>
+                <small id="descriptionHelp" class="form-text text-muted">Per 100 grams.</small>
             </div>
-            <button type="submit" class="btn btn-dark">add</button>
+            <button type="submit" class="btn btn-dark">add <i class="fas fa-pencil-alt carrot"></i></button>
         </form>
     </div>
 </div>
