--- a/pal_app/templates/base.html
+++ b/pal_app/templates/base.html
@@ -11,11 +11,18 @@
         .carrot{
         color:#f7ad2d;
         }
-
+        .msg_warn{
+        color:#f01123;
+        }
+        .msg_win{
+        color:#42a608;
+        }
+        .msg_main{
+        color:#f7ad2d;
+        }
     </style>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand btn btn-light" href="/"><i class="fas fa-carrot carrot"></i> FitnessApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
