--- a/pal_app/templates/pal_app/meal-data.html
+++ b/pal_app/templates/pal_app/meal-data.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block body %}
 <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-12">
+
         {% if meal_name %}
         <h1>{{ meal_name }}</h1>
         {% else %}
@@ -11,10 +12,19 @@
             {% csrf_token %}
             {% if product_list %}
             {% for product in product_list %}
-            <input type="checkbox" name="products" {% if product in selected %}checked{% endif %} value="{{product.id}}"
-                   id="product">
-            <label for="product">{{product.name}} - {{product.calories}} cal/100g</label>
-            <br/>
+            <div class="form-row">
+                <div class="col">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" name="products" {% if product in selected %}checked{% endif %}
+                               value="{{product.id}}"
+                               id="product{{product.id}}">
+                        <label class="form-check-label" for="product{{product.id}}">{{product.name}} - {{product.calories}} cal/100g</label>
+                    </div>
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" name="input_calories_{{product.id}}" placeholder="Enter amount in grams. {{product.calories}} cal/100g">
+                </div>
+            </div>
             {% endfor %}
             <input class="btn btn-dark" type="submit" value="save">
         </form>
